<resources>
    <string name="app_name">Tranquille</string>
    <string name="notification_channel_group_name_incoming_calls">Incoming calls</string>
    <string name="notification_channel_group_name_blocked_calls">Blocked calls</string>
    <string name="notification_channel_group_name_services">Services</string>
    <string name="notification_channel_name_known">Known calls</string>
    <string name="notification_channel_name_positive">Positive calls</string>
    <string name="notification_channel_name_neutral">Neutral calls</string>
    <string name="notification_channel_name_unknown">Unknown calls</string>
    <string name="notification_channel_name_negative">Negative calls</string>
    <string name="notification_channel_name_blocked_info">Blocked info</string>
    <string name="notification_channel_name_monitoring_service">Monitoring service</string>
    <string name="notification_channel_name_tasks">Tasks</string>
    <string name="notification_incoming_call_contact">Contact</string>
    <string name="notification_incoming_call_positive">Positive call</string>
    <string name="notification_incoming_call_neutral">Neutral call</string>
    <string name="notification_incoming_call_unknown">Unknown call</string>
    <string name="notification_incoming_call_negative">Negative call</string>
    <string name="notification_blocked_call">Blocked call</string>
    <string name="notification_incoming_call_text_description">Negative: %1$d, positive: %2$d, neutral: %3$d</string>
    <string name="notification_background_operation">Performing background operation…</string>
    <string name="sia_category_none">None</string>
    <string name="sia_category_telemarketer">Telemarketer</string>
    <string name="sia_category_dept_collector">Debt collector</string>
    <string name="sia_category_silent">Silent</string>
    <string name="sia_category_nuisance">Nuisance</string>
    <string name="sia_category_unsolicited">Unsolicited</string>
    <string name="sia_category_call_center">Call center</string>
    <string name="sia_category_fax">FAX</string>
    <string name="sia_category_nonprofit">Nonprofit org.</string>
    <string name="sia_category_political">Political</string>
    <string name="sia_category_scam">Scam</string>
    <string name="sia_category_prank">Prank</string>
    <string name="sia_category_sms">SMS</string>
    <string name="sia_category_survey">Survey</string>
    <string name="sia_category_other">Other</string>
    <string name="sia_category_financial_service">Financial service</string>
    <string name="sia_category_company">Company</string>
    <string name="sia_category_service">Service</string>
    <string name="sia_category_robocall">Robocall</string>
    <string name="sia_category_safe_personal">Safe personal</string>
    <string name="sia_category_safe_company">Safe company</string>
    <string name="sia_category_safe_nonprofit">Safe nonprofit</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="reviews_loading">Loading reviews…</string>
    <string name="reviews_loading_error">Reviews loading error</string>
    <string name="denied_permissions_message">Due to denied permissions following features may not work:</string>
    <string name="feature_info">notifications</string>
    <string name="feature_call_blocking">call blocking</string>
    <string name="feature_contacts">using contacts</string>
    <string name="denied_default_dialer_message">Advanced call blocking won\'t work due to the app not being set as the \"Phone app\"</string>
    <string name="denied_call_screening_role_message">Advanced call blocking won\'t work due to the app not being set as the \"Caller ID app\"</string>
    <string name="default_caller_id_app">Default \"Caller ID app\"</string>
    <string name="default_caller_id_app_unset">Select a different app as the \"Caller ID app\" in \"Default apps\" in system settings</string>
    <string name="default_phone_app">Default \"Phone app\"</string>
    <string name="default_phone_app_set">Select \"Tranquille\" as the \"Phone app\" in \"Default apps\" in system settings</string>
    <string name="default_phone_app_unset">Select a different app as the \"Phone app\" in \"Default apps\" in system settings</string>
    <string name="open_system_settings">Open Settings</string>
    <string name="call_log_permission_message">Grant \"Phone\" permission to see recent calls</string>
    <string name="no_main_db_title">Download main database</string>
    <string name="no_main_db_text">Database is not present. For the app to perform most of its functions you need to download DB. It will take around 25 MB of traffic.</string>
    <string name="download_main_db">Download database</string>
    <string name="main_db_downloading">Downloading DB…</string>
    <string name="secondary_db_updating">Updating DB…</string>
    <string name="online_reviews">Online reviews</string>
    <string name="add_web_review">Add review (web)</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="open_settings_activity">Settings</string>
    <string name="settings_category_main">Main</string>
    <string name="incoming_call_notifications">Incoming call notifications</string>
    <string name="incoming_call_notifications_summary">Display a notification with phone number summary (rating, reviews count, category) during incoming calls</string>
    <string name="block_negative_sia_short">Block by rating</string>
    <string name="auto_updates">Auto-update database</string>
    <string name="auto_updates_summary">Automatically receive daily updates of the number database (these are incremental/delta updates, so they consume very little traffic)</string>
    <string name="use_contacts">Use contacts</string>
    <string name="use_contacts_summary">Numbers present in Contacts are never blocked and the contact name is displayed next to/instead of a number throughout the app</string>
    <string name="settings_screen_advanced">Advanced settings</string>
    <string name="settings_category_country_codes">Country codes</string>
    <string name="country_codes_info">Explanation</string>
    <string name="country_codes_info_summary">Country codes are used in requests to 3rd party servers. These codes are set to mimic the behavior of the official 3rd party app. If the codes match your real country (may be detected by your IP address) then your requests will look the most inconspicuous. Auto-detection is used by default (based on mobile network information or system locale), which should be fine for most users, but you can set the codes manually. ISO 3166 2-letter codes (like US) are expected</string>
    <string name="country_code_override">Country code</string>
    <string name="country_code_override_summary">Country code used in all requests. Leave empty for auto-detection</string>
    <string name="country_code_for_reviews_override">Country code for reviews</string>
    <string name="country_code_for_reviews_override_summary">Country code used in requests for online reviews. Meant to represent the country of the caller. Leave empty for auto-detection</string>
    <string name="database_download_url">Primary DB download URL</string>
    <string name="settings_category_debugging">Debugging</string>
    <string name="save_crashes_to_external_storage">Save reports to public storage</string>
    <string name="save_crashes_to_external_storage_summary">Save crash reports and logs to public storage, otherwise crash reports are saved to a private app folder. The reports may contain sensitive data (phone numbers, contact names). Other apps with storage permission may have access to this data in public storage</string>
    <string name="save_logcat_on_crash">Save logcat on crash</string>
    <string name="save_logcat_on_crash_summary">Save logcat output on crash (in addition to a basic stacktrace)</string>
    <string name="export_logcat">Export logcat</string>
    <string name="export_logcat_summary">Export and share logcat contents with an app of your choosing (for example with an email client). The reports may contain sensitive data (phone numbers, contact names). Only the chosen app will have access to this data</string>
    <string name="settings_screen_db_filtering">Database filtering</string>
    <string name="db_filtering_info">Explanation</string>
    <string name="db_filtering_info_summary">This feature allows to save storage space by removing some data that is not applicable to you (like numbers belonging to different regions or countries). It doesn\'t affect general app performance (like call blocking). Filtering occurs during the initial database download and during database update. Existing data (downloaded prior to enabling the filtering) may be filtered using the \"Filter the database\" option below. Disabling the feature or changing its parameters doesn\'t restore removed data - you need to re-download the database for that</string>
    <string name="db_filtering_enabled">Filtering enabled</string>
    <string name="db_filtering_enabled_summary">Enables the filtering during the database download and update</string>
    <string name="db_filtering_prefixes_to_keep">Prefixes to keep</string>
    <string name="db_filtering_prefixes_to_keep_summary">A comma-separated list of prefixes of numbers to keep. The prefixes should be in the international format (like +1234). E.g., if you only receive calls from numbers starting with +1, put +1 here</string>
    <string name="db_filtering_thorough">Thorough filtering</string>
    <string name="db_filtering_thorough_summary">If enabled, it goes through every block of data and removes numbers not matching the prefixes. Otherwise, it only removes whole unwanted blocks (leaving some unwanted numbers in wanted blocks). It is recommended to leave this on. Required for keeping short numbers</string>
    <string name="db_filtering_keep_short_numbers">Keep short numbers</string>
    <string name="db_filtering_keep_short_numbers_summary">Keep numbers shorter than the specified length regardless of prefixes</string>
    <string name="db_filtering_keep_short_numbers_max_length">Length of numbers to keep</string>
    <string name="db_filtering_keep_short_numbers_max_length_summary">The maximum length (inclusive) of short numbers to keep regardless of prefixes. E.g. the value of 5 will keep numbers with length of 5 digits or shorter</string>
    <string name="db_filtering_filter_db">Filter the database</string>
    <string name="db_filtering_filter_db_summary">Run the database filtering now (to filter the existing data)</string>
    <string name="open_db_management_activity">Manage database</string>
    <string name="db_management_db_info">DB info</string>
    <string name="db_management_reset_base">Reset DB</string>
    <string name="db_management_reset_secondary">Reset updates</string>
    <string name="db_management_update_db">Update DB</string>
    <string name="lookup_default_test_number" translatable="false">+74995861192</string>
    <string name="lookup_hint_input_number">Phone number</string>
    <string name="lookup_clear_number">Clear number</string>
    <string name="lookup_paste_number">Paste number</string>
    <string name="lookup_query_db">Search (offline)</string>
    <string name="lookup_load_reviews">Load reviews (online)</string>
    <string name="motto">Block unwanted calls effortlessly</string>
    <string name="logo_description">Logo</string>
    <string name="homepage">Project homepage</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="translate">Translate the app on Weblate</string>
    <string name="issues">Get support / report a problem</string>
    <string name="license">This application is licensed under AGPL-3.0-only.</string>
</resources>