<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="screenAdvanced"
    app:title="@string/settings_screen_advanced">

    <Preference
        app:key="dbManagement"
        app:persistent="false"
        app:title="@string/open_db_management_activity">
        <intent
            android:targetClass="dummydomain.yetanothercallblocker.DbManagementActivity"
            android:targetPackage="@string/app_id" />
    </Preference>

    <PreferenceCategory
        app:key="categoryCountryCodes"
        app:title="@string/settings_category_country_codes">
        <Preference
            app:key="countryCodesInfo"
            app:persistent="false"
            app:summary="@string/country_codes_info_summary"
            app:title="@string/country_codes_info" />
        <EditTextPreference
            app:key="countryCodeOverride"
            app:summary="@string/country_code_override_summary"
            app:title="@string/country_code_override" />
        <EditTextPreference
            app:key="countryCodeForReviewsOverride"
            app:summary="@string/country_code_for_reviews_override_summary"
            app:title="@string/country_code_for_reviews_override" />
    </PreferenceCategory>

    <EditTextPreference
        app:key="databaseDownloadUrl"
        app:title="@string/database_download_url" />

    <PreferenceCategory
        app:key="categoryDebugging"
        app:title="@string/settings_category_debugging">
        <Preference
            app:key="exportLogcat"
            app:persistent="false"
            app:summary="@string/export_logcat_summary"
            app:title="@string/export_logcat" />
        <SwitchPreferenceCompat
            app:key="saveCrashesToExternalStorage"
            app:summary="@string/save_crashes_to_external_storage_summary"
            app:title="@string/save_crashes_to_external_storage" />
        <SwitchPreferenceCompat
            app:key="saveLogcatOnCrash"
            app:summary="@string/save_logcat_on_crash_summary"
            app:title="@string/save_logcat_on_crash" />
    </PreferenceCategory>

</PreferenceScreen>
