<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_main">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="incomingCallNotifications"
            app:summary="@string/incoming_call_notifications_summary"
            app:title="@string/incoming_call_notifications" />
        <SwitchPreferenceCompat
            app:key="blockCalls"
            app:summary="@string/block_calls_summary"
            app:title="@string/block_calls" />
        <SwitchPreferenceCompat
            app:key="autoUpdateEnabled"
            app:persistent="false"
            app:summary="@string/auto_updates_summary"
            app:title="@string/auto_updates" />
        <SwitchPreferenceCompat
            app:key="useContacts"
            app:summary="@string/use_contacts_summary"
            app:title="@string/use_contacts" />
    </PreferenceCategory>

</PreferenceScreen>
