<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DbManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDbInfoButtonClick"
            android:text="@string/db_management_db_info" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUpdateDbButtonClick"
            android:text="@string/db_management_update_db" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onResetDbClick"
                android:text="@string/db_management_reset_base" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onResetSecondaryDbClick"
                android:text="@string/db_management_reset_secondary" />

        </LinearLayout>

        <TextView
            android:id="@+id/debugResultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            tools:text="Some data" />

    </LinearLayout>

</ScrollView>
